syntax = "proto3";

option go_package = "./greeter";

service Greeter{
  rpc SayHello(HelloReq)returns(HelloRes);
}

message HelloReq{
  string name = 1;
}

message HelloRes{
  string message = 1;
}